--- a/app/css/style.css
+++ b/app/css/style.css
@@ -5,13 +5,19 @@ body {
 }
 
 #content, #topBar {
-    width: 50%;
+    width: 100%;
     margin: 0 auto; 
     text-align: center;
 }
 
 #topBar {
 	padding: 8px;
+  padding-top: 50px;
+}
+
+#content {
+  max-height: 85vh;
+  overflow: scroll;
 }
 
 /*#topBar {
